# cortex

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  ORGANIZATION_SUMMARY.txt  PRD-second-brain.md  README.md  TDD-second-brain.md  docker-compose.gpu.yml  docker-compose.yml  idea.txt  justfile  pyproject.toml  settings.example.yaml
.claude/commands/: cortex-capture.md  cortex-inbox.md  cortex-link.md  cortex-note.md  cortex-reindex.md  cortex-review.md  cortex-search.md  cortex-stale.md  cortex-stats.md  cortex-task.md  dev-loop.md
.cortex-tasks/: PROGRESS.md  TASKS.md
cortex/: .dockerignore  README.md  justfile  pyproject.toml
cortex/.github/: CONTRIBUTING.md
cortex/evals/: golden_dataset.json  harness.py  metrics.py
cortex/scripts/: docker-entrypoint.sh
cortex/vault.example/: README.md
cortex/vault.example/_templates/: task.md
docs/: 01-PRODUCT_REQUIREMENTS.md  02-ARCHITECTURE.md  03-CRITICAL_DECISIONS.md  README.md
evals/: golden_dataset.json  harness.py  metrics.py
scripts/: dev-loop.sh  docker-entrypoint.sh
src/cortex/: __init__.py  __main__.py  cli.py  config.py  health.py  main.py  profile.py
src/cortex/capture/: draft.py  link.py  note.py  task.py  thought.py
src/cortex/graph/: builder.py  manager.py  queries.py
src/cortex/index/: chunker.py  lexical.py  manager.py  models.py  semantic.py
src/cortex/lifecycle/: manager.py  staleness.py
src/cortex/mcp/: server.py
src/cortex/query/: context.py  fusion.py  pipeline.py  reranker.py
src/cortex/vault/: manager.py  parser.py  templates.py  watcher.py
src/cortex/workflow/: inbox.py  review.py  staleness_review.py  summarize.py
tests/: conftest.py  test_config.py  test_health.py  test_main.py
tests/test_capture/: test_approve.py  test_commands.py  test_draft.py  test_draft_conflict.py
tests/test_evals/: test_harness.py  test_metrics.py
tests/test_graph/: test_manager.py  test_queries.py
tests/test_index/: test_chunker.py  test_lexical.py  test_manager.py  test_models.py  test_semantic.py
tests/test_lifecycle/: test_archive.py  test_edit.py  test_staleness.py  test_supersede.py
tests/test_mcp/: test_lifecycle_tools.py  test_search_admin.py  test_search_integration.py  test_server.py
tests/test_query/: test_context.py  test_fusion.py  test_pipeline.py  test_reranker.py
tests/test_vault/: test_links.py  test_manager.py  test_manager_write.py  test_parser.py  test_scaffold.py  test_templates.py  test_watcher.py
tests/test_workflow/: test_inbox.py  test_review.py  test_staleness_review.py  test_summarize.py
vault.example/: README.md
vault.example/_templates/: concept.md  inbox.md  permanent.md  project.md  source.md
