[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cortex"
version = "0.1.0"
description = "Local-first AI-native second brain powered by Obsidian and Claude"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
keywords = ["obsidian", "knowledge-management", "claude", "mcp", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Internet",
]

dependencies = [
    # MCP and Claude integration
    "fastmcp>=2.0.0",                              # FastMCP 3.x — decorator-based MCP server
    # Vault and markdown
    "python-frontmatter>=1.0.0",                   # YAML frontmatter extraction
    "mistune>=3.0.0",                              # Markdown parsing
    "watchdog>=3.0.0",                             # File system watching
    # Indexing and search
    "duckdb>=0.9.0",                               # Full-text search + metadata
    "lancedb>=0.1.0",                              # Vector storage
    "sentence-transformers>=2.2.0",                # Embeddings (nomic-embed-text)
    # Knowledge graph
    "networkx>=3.0",                               # Graph algorithms
    # Configuration and utilities
    "pydantic-settings>=2.0.0",                    # Typed configuration
    "pydantic>=2.0.0",                             # Data validation
    "python-dateutil>=2.8.0",                      # Date utilities
    # Async
    "anyio>=4.0.0",                                # Async I/O compatibility
    "einops>=0.8.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.0.0",
]

[project.urls]
Documentation = "https://github.com/your-org/cortex"
Repository = "https://github.com/your-org/cortex"
Issues = "https://github.com/your-org/cortex/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cortex"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --strict-markers --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src/cortex"]
omit = ["*/tests/*"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "RUF"]
ignore = ["E501"]  # Line too long (handled by black)
exclude = [".git", ".venv", "build", "dist"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false  # Gradual typing
ignore_missing_imports = false
strict_optional = true

[tool.ruff.isort]
known-first-party = ["cortex"]
